--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "a library for plotting math functions into canvas",
   "main": "DirectorMode.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "NODE_ENV=dev webpack-dev-server --port 8090 --content-base examples/",
+    "build": "NODE_ENV=prod webpack -p"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,7 @@
   "devDependencies": {
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-2": "^6.5.0",
     "webpack-dev-server": "^1.14.1"
